# pillar

./: Pillar.postman_collection.json  Procfile  README.md  main.py  pyproject.toml  requirements.txt
.ebextensions/: 01_fastapi.config
.github/workflows/: code-quality.yml  ebs-deploy.yml
pillar/: app.py  models.py
tests/: test_sort_words.py  test_vowel_count.py
